export const snapshot = {};

snapshot[`snapshot student 1`] = `
BEGIN:VCALENDAR
PRODID:-//bkalendar//BKalendar//VI
VERSION:2.0
BEGIN:VTIMEZONE
TZID:Asia/Ho_Chi_Minh
TZURL:http://tzurl.org/zoneinfo-outlook/Asia/Ho_Chi_Minh
X-LIC-LOCATION:Asia/Ho_Chi_Minh
BEGIN:STANDARD
TZOFFSETFROM:+0700
TZOFFSETTO:+0700
TZNAME:+07
DTSTART:19700101T000000
END:STANDARD
END:VTIMEZONE
BEGIN:VEVENT


SUMMARY:Võ (Vovinam, Karate, Taewondo) (học phần 1)
DESCRIPTION:mã môn học: PE1023
tín chỉ: --
tín chỉ học phí: 1.5
nhóm tổ: L262
LOCATION:CS2-NHATHIDAU-SAN1
DTSTART;TZID=Asia/Ho_Chi_Minh:20201012T150000
DTEND;TZID=Asia/Ho_Chi_Minh:20201012T175000
RRULE:FREQ=WEEKLY;UNTIL=20210118T080000Z
EXDATE;TZID=Asia/Ho_Chi_Minh
 :20201102T150000
 ,20201109T150000
 ,20201116T150000
 ,20201123T150000
 ,20201214T150000
END:VEVENT
BEGIN:VEVENT


SUMMARY:Giải tích 1
DESCRIPTION:mã môn học: MT1003
tín chỉ: 4
tín chỉ học phí: 4
nhóm tổ: L25
LOCATION:H1-304
DTSTART;TZID=Asia/Ho_Chi_Minh:20201013T070000
DTEND;TZID=Asia/Ho_Chi_Minh:20201013T095000
RRULE:FREQ=WEEKLY;UNTIL=20210119T000000Z
EXDATE;TZID=Asia/Ho_Chi_Minh
 :20201103T070000
 ,20201110T070000
 ,20201117T070000
 ,20201124T070000
 ,20201215T070000
END:VEVENT
BEGIN:VEVENT


SUMMARY:Vật lý 1
DESCRIPTION:mã môn học: PH1003
tín chỉ: 4
tín chỉ học phí: 4
nhóm tổ: L24
LOCATION:H1-301
DTSTART;TZID=Asia/Ho_Chi_Minh:20201014T130000
DTEND;TZID=Asia/Ho_Chi_Minh:20201014T155000
RRULE:FREQ=WEEKLY;UNTIL=20210120T060000Z
EXDATE;TZID=Asia/Ho_Chi_Minh
 :20201104T130000
 ,20201111T130000
 ,20201118T130000
 ,20201125T130000
 ,20201216T130000
END:VEVENT
BEGIN:VEVENT


SUMMARY:GIAI TICH 1 (BT)
DESCRIPTION:mã môn học: MT1004
tín chỉ: --
tín chỉ học phí: --
nhóm tổ: L44
LOCATION:H1-103
DTSTART;TZID=Asia/Ho_Chi_Minh:20201015T150000
DTEND;TZID=Asia/Ho_Chi_Minh:20201015T165000
RRULE:FREQ=WEEKLY;UNTIL=20210121T080000Z
EXDATE;TZID=Asia/Ho_Chi_Minh
 :20201105T150000
 ,20201112T150000
 ,20201119T150000
 ,20201126T150000
 ,20201217T150000
END:VEVENT
BEGIN:VEVENT


SUMMARY:Võ (Vovinam, Karate, Taewondo) (học phần 1)
DESCRIPTION:mã môn học: PE1023
tín chỉ: --
tín chỉ học phí: 1.5
nhóm tổ: L262
LOCATION:CS2-NHATHIDAU-SAN1
DTSTART;TZID=Asia/Ho_Chi_Minh:20201016T150000
DTEND;TZID=Asia/Ho_Chi_Minh:20201016T175000
RRULE:FREQ=WEEKLY;UNTIL=20210122T080000Z
EXDATE;TZID=Asia/Ho_Chi_Minh
 :20201106T150000
 ,20201113T150000
 ,20201120T150000
 ,20201127T150000
 ,20201218T150000
 ,20210101T150000
END:VEVENT
END:VCALENDAR
`;

snapshot[`snapshot lecturer 1`] = `
BEGIN:VCALENDAR
PRODID:-//bkalendar//BKalendar//VI
VERSION:2.0
BEGIN:VTIMEZONE
TZID:Asia/Ho_Chi_Minh
TZURL:http://tzurl.org/zoneinfo-outlook/Asia/Ho_Chi_Minh
X-LIC-LOCATION:Asia/Ho_Chi_Minh
BEGIN:STANDARD
TZOFFSETFROM:+0700
TZOFFSETTO:+0700
TZNAME:+07
DTSTART:19700101T000000
END:STANDARD
END:VTIMEZONE
BEGIN:VEVENT


SUMMARY:NHAP MON DIEN TOAN (TH)
DESCRIPTION:lớp: 20221_CO1006_L11
LOCATION:H6-707
DTSTART;TZID=Asia/Ho_Chi_Minh:20221027T120000
DTEND;TZID=Asia/Ho_Chi_Minh:20221027T165000
END:VEVENT
BEGIN:VEVENT


SUMMARY:NHAP MON DIEN TOAN (TH)
DESCRIPTION:lớp: 20221_CO1006_L11
LOCATION:HANGOUT_TUONGTAC
DTSTART;TZID=Asia/Ho_Chi_Minh:20221117T120000
DTEND;TZID=Asia/Ho_Chi_Minh:20221117T165000
RRULE:FREQ=WEEKLY;UNTIL=20221124T050000Z
END:VEVENT
BEGIN:VEVENT


SUMMARY:NHAP MON DIEN TOAN (TH)
DESCRIPTION:lớp: 20221_CO1006_L23
LOCATION:H6-707
DTSTART;TZID=Asia/Ho_Chi_Minh:20221110T120000
DTEND;TZID=Asia/Ho_Chi_Minh:20221110T165000
RRULE:FREQ=WEEKLY;UNTIL=20221222T050000Z
EXDATE;TZID=Asia/Ho_Chi_Minh
 :20221117T120000
 ,20221124T120000
 ,20221201T120000
 ,20221208T120000
 ,20221215T120000
END:VEVENT
BEGIN:VEVENT


SUMMARY:NHAP MON DIEN TOAN (TH)
DESCRIPTION:lớp: 20221_CO1006_L23
LOCATION:HANGOUT_TUONGTAC
DTSTART;TZID=Asia/Ho_Chi_Minh:20221117T120000
DTEND;TZID=Asia/Ho_Chi_Minh:20221117T165000
RRULE:FREQ=WEEKLY;UNTIL=20221124T050000Z
END:VEVENT
BEGIN:VEVENT


SUMMARY:NHAP MON DIEN TOAN (TH)
DESCRIPTION:lớp: 20221_CO1006_L11
LOCATION:HANGOUT_TUONGTAC
DTSTART;TZID=Asia/Ho_Chi_Minh:20221208T120000
DTEND;TZID=Asia/Ho_Chi_Minh:20221208T165000
END:VEVENT
END:VCALENDAR
`;

snapshot[`snapshot postgrad 1`] = `
BEGIN:VCALENDAR
PRODID:-//bkalendar//BKalendar//VI
VERSION:2.0
BEGIN:VTIMEZONE
TZID:Asia/Ho_Chi_Minh
TZURL:http://tzurl.org/zoneinfo-outlook/Asia/Ho_Chi_Minh
X-LIC-LOCATION:Asia/Ho_Chi_Minh
BEGIN:STANDARD
TZOFFSETFROM:+0700
TZOFFSETTO:+0700
TZNAME:+07
DTSTART:19700101T000000
END:STANDARD
END:VTIMEZONE
BEGIN:VEVENT


SUMMARY:(CO5143) - Xử lý ngôn ngữ tự nhiên
DESCRIPTION:cán bộ giảng dạy: GS.TS Phan Thị Tươi
lớp: 1 / 
ghi chú: 
LOCATION:Trực tuyến
DTSTART;TZID=Asia/Ho_Chi_Minh:20230910T090000
DTEND;TZID=Asia/Ho_Chi_Minh:20230910T115000
RRULE:FREQ=WEEKLY;UNTIL=20231008T020000Z
END:VEVENT
BEGIN:VEVENT


SUMMARY:(CO5143) - Xử lý ngôn ngữ tự nhiên
DESCRIPTION:cán bộ giảng dạy: GS.TS Phan Thị Tươi
lớp: 1 / 
ghi chú: 
LOCATION:601B4
DTSTART;TZID=Asia/Ho_Chi_Minh:20231015T090000
DTEND;TZID=Asia/Ho_Chi_Minh:20231015T115000
RRULE:FREQ=WEEKLY;UNTIL=20231112T020000Z
END:VEVENT
BEGIN:VEVENT


SUMMARY:(CO5240) - Kỹ thuật dữ liệu
DESCRIPTION:cán bộ giảng dạy: TS. Phan Trọng Nhân
lớp: 1 / 
ghi chú: 
LOCATION:305B4
DTSTART;TZID=Asia/Ho_Chi_Minh:20230908T180000
DTEND;TZID=Asia/Ho_Chi_Minh:20230908T203000
RRULE:FREQ=WEEKLY;UNTIL=20231201T110000Z
END:VEVENT
END:VCALENDAR
`;
